Fix page wrap width

--- a/client/src/css/Global.css
+++ b/client/src/css/Global.css
@@ -17,7 +17,6 @@
 body {
     background-color: var(--branco);
     margin: 0;
-    padding: 0;
 }
 
 .wrapper {
@@ -28,6 +27,7 @@ body {
 
 .page-wrap {
     margin-left: var(--sidebar-width);
+    width: 100%;
 }
 
 .page-content {
